2006-05-08  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in: remove check for perl since we're not using any of the
	gmmproc stuff for cairomm
	* docs/reference/Makefile.am: add documentation dependency on all of the
	headers in the cairomm/ directory so that if a header changes the
	documentation will be rebuilt.

2006-04-20  Murray Cumming  <murrayc@murrayc.com>

	* cairomm/context.cc:
	* cairomm/context.h: mask(pattern) and mask(surface): Make the parameter 
	const, because I am fairly sure that the C function does not change it.

2006-04-06  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* Makefile.am: Add a brief description of cairomm to the release
	announcement template

2006-04-04  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/reference/Doxyfile.in:
	* docs/reference/Makefile.am: A couple minor build fixes to make distcheck
	happy

2006-04-04  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* NEWS: add news for 0.6.0 release
	* configure.in: bump version to 0.6.0

2006-04-03  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* examples/text-rotate/text-rotate.cc: protect PNG functions with #ifdef in
	case cairo wasn't compiled with PNG support

2006-03-31  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* Makefile.am:
	* docs/Makefile.am:
	* docs/reference/Makefile.am: add convenience targets for cleaning and
	rebuilding documentation (doc-clean and doc-rebuild).

2006-03-30  Danilo Piazzalunga  <danilopiazza@gmail.com>

	* configure.in: enable documentation even if doxygen and/or graphviz
	are missing, so the docs will be installed when building a release.
	* docs/reference/Makefile.am: don't remove html directory with `make clean`,
	so that users of the tarball releases don't destroy the pre-built
	documentation when running make clean. Change to maintainer-clean

2006-03-29  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* configure.in: added tests for doxygen and graphviz which displays a