@@ -71,7 +71,7 @@ WARN_LOGFILE           = undocumented.txt
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = @top_srcdir@/cairomm @srcdir@/introduction.h
+INPUT                  = @top_srcdir@/cairomm
 FILE_PATTERNS          = *.h
 RECURSIVE              = NO
 EXCLUDE                = @top_srcdir@/cairomm/private.h
@@ -106,7 +106,7 @@ IGNORE_PREFIX          =
 GENERATE_HTML          = YES
 HTML_OUTPUT            = html
 HTML_FILE_EXTENSION    = .html
-HTML_HEADER            = 
+HTML_HEADER            = cairomm-header.html
 HTML_FOOTER            = 
 HTML_STYLESHEET        = cairomm.css
 HTML_ALIGN_MEMBERS     = YES
