@@ -15,6 +15,7 @@ a:hover {
 h1 {
     text-align: center;
     font-size: 160%;
+    margin-top: 1.5em;
 }
 h2 {
     font-size: 140%;
@@ -33,30 +34,40 @@ div.qindex {
     padding: 0.5em;
     line-height: 150%;
 }
-DIV.nav {
+div.nav {
     width: 100%;
     color: #FFFFFF;
     background-color: #3B80AE;
     text-align: center;
-    margin: 0.5em;
     padding: 0.5em;
-    line-height: 140%;
 }
 
 div.nav a:link, div.nav a:visited  {
     color: #FFFFFF !important;
     text-decoration: underline;
 }
-div.navtab {
+div.tabs {
     background-color: #dedede;
-    border: 1px solid #b0b0b0;
     text-align: center;
-    margin: 2px;
-    margin-right: 15px;
-    padding: 2px;
+    padding: 0.2em;
+    margin: 1em 0em;
+    font-size: 80%;
+    font-weight: bold;
+    width: 100%;
 }
-td.navtab {
-    font-size: 70%;
+.tabs ul {
+    margin: 0em;
+    padding: 0em;
+    list-style: none;
+    text-align: center;
+}
+.tabs ul li {
+    display: inline;
+    padding: 0.5em 2em;
+}
+.tabs ul li#current {
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
 }
 a.qindex    {
     font-weight: bold;
