@@ -1,11 +1,0 @@
-/** \mainpage Cairomm: A C++ wrapper for the cairo graphics library
- *
- * \section License
- * Cairomm is available under the terms of the LGPL license
- *
- * \section Introduction
- * If you're just beginning to learn cairomm, a good place to start is with the
- * Cairo::Surface and Cairo::Context classes.  In general terms, you draw onto
- * a Surface using the graphics settings specified in your Context.
- *
- */
